force-app/main/default/objects/Order/fields/COMM_BillingName__c.field-meta.xml
<CustomField>
    <fullName>COMM_BillingName__c</fullName>
    <description>Name for invoicing. It can be a Company Name or a Person First and Last Name.</description>
    <label>Billing Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>