force-app/main/default/objects/Order/fields/COMM_Language__c.field-meta.xml
<CustomField>
    <fullName>COMM_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_LanguageCodes</valueSetName>
    </valueSet>
</CustomField>