force-app/main/default/objects/Order/fields/COMM_ReplacedOrder__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReplacedOrder__c</fullName>
    <description>Replaced Order Summary Id when a new order to replace the original (or order items) is created. These should be a salesforce OrderSummary Id</description>
    <label>Replaced Order Summary Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>