force-app/main/default/objects/Order/fields/COMM_ReplacedOrderItems__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReplacedOrderItems__c</fullName>
    <description>List of Order Product Summary Ids that were cancelled on the original Order. List of Ids separated by , (comma). These should be salesforce a list of Order Product Summary Ids</description>
    <label>Replaced Order Product Summary Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>